// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account reducer create account fail 1`] = `
Object {
  "createError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "createLoading": false,
  "loading": false,
  "subscription": Object {},
  "updateError": null,
  "updateLoading": false,
}
`;

exports[`Account reducer create account pending 1`] = `
Object {
  "createError": null,
  "createLoading": true,
  "loading": false,
  "subscription": Object {},
  "updateError": null,
  "updateLoading": false,
}
`;

exports[`Account reducer create account success 1`] = `
Object {
  "createLoading": false,
  "loading": false,
  "payload": Object {
    "results": Object {
      "customer_id": 1000242,
      "message": "Account created, welcome to SparkPost!",
      "username": "john.smith",
    },
  },
  "subscription": Object {},
  "updateError": null,
  "updateLoading": false,
}
`;

exports[`Billing reducer get billing fail 1`] = `
Object {
  "billingError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "billingLoading": false,
  "createLoading": false,
  "loading": false,
  "subscription": Object {},
  "updateError": null,
  "updateLoading": false,
}
`;

exports[`Billing reducer get billing pending 1`] = `
Object {
  "billingLoading": true,
  "createLoading": false,
  "loading": false,
  "subscription": Object {},
  "updateError": null,
  "updateLoading": false,
}
`;

exports[`Billing reducer get billing success 1`] = `
Object {
  "billing": Object {
    "card": "************0001",
  },
  "billingLoading": false,
  "createLoading": false,
  "loading": false,
  "subscription": Object {},
  "updateError": null,
  "updateLoading": false,
}
`;

exports[`Billing reducer get billing success empty 1`] = `
Object {
  "billing": null,
  "billingLoading": false,
  "createLoading": false,
  "loading": false,
  "subscription": Object {},
  "updateError": null,
  "updateLoading": false,
}
`;
